# microsoft_security_acknowledgments

./: README.md  pyproject.toml
src/: __init__.py  consts.py  main.py  utils.py  vulnerability.py
