[tool.poetry]
name = "snyk_interview"
version = "0.1.0"
description = ""
authors = ["Adam Goldschmidt <adamgold7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
